# rlhf-pairwise-rater

./: .gitignore  CHANGELOG.md  README.md  SPACE_README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: sample_cases.jsonl
rater/: __init__.py  __main__.py  cases.py  prompts.py  stats.py
tests/: test_cases.py  test_stats.py
